[gd_scene load_steps=3 format=3 uid="uid://barng7g5f88e1"]

[ext_resource type="Script" path="res://game_hud.gd" id="2_22ej2"]
[ext_resource type="FontFile" uid="uid://6pl6qtoo2p2x" path="res://fonts/Xolonium-Regular.ttf" id="2_e8tjs"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("2_22ej2")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -190.0
offset_right = 190.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_e8tjs")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -220.0
offset_right = 190.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_e8tjs")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
